--- a/grand-city-race/package.json
+++ b/grand-city-race/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.26.7",
+    "@tailwindcss/vite": "^4.0.3",
     "firebase": "^11.2.0",
     "html5-qrcode": "^2.3.8",
     "react": "^18.3.1",
