--- a/grand-city-race/package.json
+++ b/grand-city-race/package.json
@@ -15,6 +15,7 @@
     "firebase": "^11.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-pro-sidebar": "^1.1.0",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^7.1.4"
   },
