--- a/grand-city-race/package.json
+++ b/grand-city-race/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.26.7",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@tailwindcss/vite": "^4.0.3",
     "firebase": "^11.2.0",
     "react": "^18.3.1",
