--- a/grand-city-race/package.json
+++ b/grand-city-race/package.json
@@ -15,7 +15,10 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@tailwindcss/vite": "^4.0.3",
+    "file-saver": "^2.0.5",
     "firebase": "^11.2.0",
+    "jszip": "^3.10.1",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-pro-sidebar": "^1.1.0",
