--- a/grand-city-race/package.json
+++ b/grand-city-race/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.0.3",
     "file-saver": "^2.0.5",
     "firebase": "^11.2.0",
+    "framer-motion": "^12.4.7",
     "jszip": "^3.10.1",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
@@ -29,7 +30,7 @@
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "^1.3.2",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
