--- a/grand-city-race/package.json
+++ b/grand-city-race/package.json
@@ -22,6 +22,7 @@
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-player": "^2.16.0",
     "react-pro-sidebar": "^1.1.0",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^7.1.4"
