--- a/grand-city-race/package.json
+++ b/grand-city-race/package.json
@@ -14,8 +14,10 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "firebase": "^11.2.0",
+    "i18next": "^25.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.5.2",
     "react-player": "^2.16.0",
     "react-router-dom": "^7.1.4"
   },
